# dcmqi

./: .travis.yml  CMakeLists.txt  appveyor.yml  cdcmqi.pxd  dcmqi.pyx
CMakeExternals/: DCMTK.cmake  ITK.cmake  SlicerExecutionModel.cmake
apps/seg/: CMakeLists.txt  itkimage2segimage.cxx  itkimage2segimage.xml
apps/seg/Testing/: CMakeLists.txt
apps/sr/: CMakeLists.txt  pirads-sr.cxx  pirads-sr.xml  qiicrx-sr.cxx  qiicrx-sr.xml  qiicrxSR.cxx  tid1500writer.cxx
doc/: bmmr-example.json  common-schema.json  pm-schema.json  seg-example.json  seg-schema.json  sr-tid1500-ct-liver-example.json  sr-tid1500-example.json
doc/examples/: qiicrx-example.json
doc/pmContexts/: pm-dce-context.json
doc/schemas/: pm-context-schema.json
include/dcmqi/: ConverterBase.h  ImageSEGConverter.h  QIICRUIDs.h  TIDQIICRXReader.h  tidqiicrx.h
libsrc/: CMakeLists.txt  TIDQIICRXReader.cpp  tidqiicrx.cc
